# PointCloud_Reconstruction

./: CMakeLists.txt  README.md
data/: horse0.pcd  horse1.pcd  teapot0.pcd  teapot1.pcd  wolf0.pcd  wolf_2.pcd
results/: fountain_01_20_10_icp.txt  fountain_01_20_10_tricp.txt  fountain_01_20_2_icp.txt  fountain_01_20_2_tricp.txt  fountain_05_20_1_icp.txt  fountain_05_20_1_tricp.txt  fountain_0_10_10_icp.txt  fountain_0_10_10_tricp.txt  fountain_0_10_2_icp.txt  fountain_0_10_2_tricp.txt  fountain_0_20_20_icp.txt  fountain_0_20_20_tricp.txt  fountain_0_20_50_icp.txt  fountain_0_20_50_tricp.txt  fountain_1_20_10_icp.txt  fountain_1_20_10_tricp.txt  wolf_0_10_50_icp.txt  wolf_0_10_50_tricp.txt  wolf_0_20_0_icp.txt  wolf_0_20_0_tricp.txt  wolf_0_20_100_icp.txt  wolf_0_20_100_tricp.txt  wolf_0_40_0_icp.txt  wolf_0_40_0_tricp.txt  wolf_1_10_100_icp.txt  wolf_1_10_100_tricp.txt
src/: boost.h  main.cpp  main_extra.cpp
